--- a/style.css
+++ b/style.css
@@ -1,120 +1,158 @@
-.header_links {
-    
-    text-align:left;
-    font-size:small;
-    
-    
-    
-    
-  }
 
-  li
+
+
+li
 {
-  display:inline-block;
-  padding-inline-start:5px;
+display:inline-block;
+padding-inline-start:5px;
+
+
+}
+
+.upper_footer{
+
+  border-style: solid;
+  border-width: 1px;
+  height:40px;
+  border-color:black;
+}
+
+
+.lower_footer{
+
+  border-style: solid;
+  border-width: 1px;
+  height:40px;
+  border-color:black;
+}
+
+.header{
+
+  border-style: solid;
+  margin-left: 1075px;
+  border-width: 1px;
+  padding-bottom:20px;
+  height:30px;
+  border-color:transparent;
   
+  
+
+}
+
+.header_text{
+  border-style: solid;
+  float:left;
+  border-width: 1px;
+  width:150px;
+  height:50px;
+  border-color:transparent;
+ 
+}
+
+a.h_text{
+  font-size:11px;
+  bottom:5px;
+  left:15px;
+  position:relative;
+}
+
+
+a.material-icons{
+  font-size:25px;
+  bottom:5px;
+  right:40px;
+  position:relative;
+}
+
+
+.header_symbol{
+  border-style: solid;
+  float:left;
+  border-width: 1px;
+  width:1px;
+  height:50px;
+  border-color:transparent;
+  
+
+}
+
+.up_text {
+  text-align:center;
+}
+
+.low_text {
+  text-align:center;
+}
+
+
+
+.search_text {
+  text-align:center;
+ 
+}
+
+
+.search{
+
+  border-style: solid;
+  border-width: 1px;
+  height:490px;
+  margin-top: 5px;
+  border-color:black;
+}
+
+material-icons:hover{
+
+  text-decoration:none;
+  
+
+}
+
+a:link{
+  
+  color: black;
+  text-decoration:none;
+
+
+}
+a:hover{
+
+  text-decoration:underline;
+  
+
+}
+
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size:22px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-background-inline-policy: 'liga';
+}
+
+
+.icon{
+  border-radius: 50%;
+  position: relative;
+  bottom:37px;
   
 }
 
-  .upper_footer{
-
-    border-style: solid;
-    border-width: 1px;
-    height:40px;
-    border-color:black;
-  }
-
-
-  .lower_footer{
-
-    border-style: solid;
-    border-width: 1px;
-    height:40px;
-    border-color:black;
-  }
-
-  .header{
-
-    border-style: solid;
-    margin-left: 1075px;
-    border-width: 1px;
-    padding-bottom:20px;
-    padding-left:10px;
-    height:50px;
-    border-color:black;
-    
-  
-  }
-
-  .up_text {
-    text-align:center;
-  }
-
-  .low_text {
-    text-align:center;
-  }
-
-
-
-  .search_text {
-    text-align:center;
-   
-  }
-
-
-  .search{
-
-    border-style: solid;
-    border-width: 1px;
-    height:490px;
-    margin-top: 5px;
-    border-color:black;
-  }
-
-  material-icons:hover{
-  
-    text-decoration:none;
-    
-
-  }
-
-  a:link{
-    
-    color: black;
-    text-decoration:none;
-
-
-  }
-  a:hover{
-  
-    text-decoration:underline;
-    
-
-  }
-
-
-  .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size:22px;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-    -moz-background-inline-policy: 'liga';
-  }
-
-
-  .icon{
-    border-radius: 50%;
-   
-   
-
-  }
-
+.flex {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
 
   
+
