--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ color: #202124;
   color: rgba(0,0,0,.54);
   font-size:14px;
   font-family: arial,sans-serif;
+  width:100%;
+  position: fixed;
+  bottom:45px;
+ 
+ 
+  
 
 }
 
@@ -102,6 +108,10 @@ color: #202124;
   border-right:none;
   font-size:14px;
   font-family: arial,sans-serif;
+  position: fixed;
+  bottom:0;
+  width:100%;
+ 
   
   
 }
