--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ color: #202124;
 
 
 .nav_bar_text{
-  padding-left: 20px;
+
   padding-right: 20px;
 
 }
@@ -101,16 +101,18 @@ color: #202124;
   border-width: 0.5px;
   height:40px;
   padding-bottom:5px;
+  padding-right:5px;
   background-color:#f2f2f2;
   border-top:none;
   border-bottom:none;
   border-left:none;
-  border-right:none;
+  border-right:transparent;
   font-size:14px;
   font-family: arial,sans-serif;
   position: fixed;
   bottom:0;
   width:100%;
+  
  
   
   
